--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -31,7 +31,7 @@ runs:
         subject-path: ${{ env.ZIP_NAME }}_${{ env.TAG_NAME }}.zip
 
     - name: Release
-      uses: softprops/action-gh-release@v2
+      uses: softprops/action-gh-release@master
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
