--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,10 +2,10 @@ name: C++ CI
 
 on:
   push:
-    branches: ['**'] # NOTE: replace/update with appropriate branch name(s)
-    tags: ['**']
-  # pull_request:
-  #   branches: ['**'] # NOTE: replace/update with appropriate branch name(s)
+    branches: ['*'] # NOTE: replace/update with appropriate branch name(s)
+    tags: ['*']
+  pull_request:
+    branches: ['*'] # NOTE: replace/update with appropriate branch name(s)
   workflow_dispatch:
     inputs:
       build_type:
@@ -191,12 +191,12 @@ jobs:
 
       - name: Build
         run: |
-          bash ./scripts/cmake.sh build -c ${{ env.BUILD_TYPE }}
+          bash ./scripts/cmake.sh build -t ${{ env.BUILD_TYPE }}
 
       - name: Install
         # Use CMake to "install" build artifacts (only interested in CMake registered targets) to our custom artifacts directory
         run: |
-          bash ./scripts/cmake.sh install -c ${{ env.BUILD_TYPE }} -i artifacts
+          bash ./scripts/cmake.sh install -i artifacts -t ${{ env.BUILD_TYPE }}
 
       - name: Move artifacts
         run: |
